{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 200,
  "lineage": "cf8f7b94-e2db-673d-16e0-2fd0f71f05bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0347745f8fdbed293",
            "association_id": "eipassoc-05a388e714658cd4e",
            "domain": "vpc",
            "id": "eipalloc-0347745f8fdbed293",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0bf01e7ceed19d015",
            "private_dns": "ip-10-0-7-10.us-east-2.compute.internal",
            "private_ip": "10.0.7.10",
            "public_dns": "ec2-3-130-150-100.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.150.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc8dd2fbf6965ee4",
            "domain": "vpc",
            "id": "eipalloc-0dc8dd2fbf6965ee4",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-129-28-155.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.28.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat-positively-suited-earwig"
            },
            "tags_all": {
              "Name": "Nat-positively-suited-earwig"
            },
            "vpc": true
          },
          "dependencies": [
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0780aaaa827802b2e",
            "association_id": "eipassoc-0192c21b1cdc499e9",
            "domain": "vpc",
            "id": "eipalloc-0780aaaa827802b2e",
            "instance": "i-0087da5a2f2a2b251",
            "network_border_group": "us-east-2",
            "network_interface": "eni-007e0a266f8d6f590",
            "private_dns": "ip-10-0-0-109.us-east-2.compute.internal",
            "private_ip": "10.0.0.109",
            "public_dns": "ec2-18-221-102-67.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.102.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Windows-positively-suited-earwig"
            },
            "tags_all": {
              "Name": "Windows-positively-suited-earwig"
            },
            "vpc": true
          },
          "dependencies": [
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Linux-EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022661f8a4a1b91cf",
            "arn": "arn:aws:ec2:us-east-2:767397775147:instance/i-06b8bb425adfcb984",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b8bb425adfcb984",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "positively-suited-earwig",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ffb2b1130cf2851",
            "private_dns": "ip-10-0-10-38.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b3b1e28952d32ebc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c906e2a87c07a0e0",
            "tags": {
              "Name": "Linux-positively-suited-earwig"
            },
            "tags_all": {
              "Name": "Linux-positively-suited-earwig"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cfaead773fc238a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.LinuxSG",
            "aws_subnet.Private-Subnet",
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Windows-Web-EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6aa5f69f06ffa91",
            "arn": "arn:aws:ec2:us-east-2:767397775147:instance/i-0087da5a2f2a2b251",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0087da5a2f2a2b251",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "positively-suited-earwig",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "ijV+imMhKVs149Hw7GcjV3eLMQjvAKewNJuVGqLbJfAaw/mLpsVw1AFbvQE1LRTnbivrDvHbKQncn9E5dCS9ve//FuIjN/3CRh0w//U46l9GhpzijMeWHpps/vFT31NrTA/7o1MVbIQ+LfJPB2BdtaMoF/w9DspEmhpwZ618F4o8InFC0/MNn3ewPzqbyzAEXGX6TfUusohCNun9Kj+mFb793bLmtPjecv8/l8pgiYfecSOY3R9OIgEZfXBk1CRANzVNkrYYcROjI/BfouBlk2AguWLtQckeBfYFF4MtgXppIPvZkfBlEK+YJgVj7Xml73DeV8kRHlsIeyayz83wGQ==",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007e0a266f8d6f590",
            "private_dns": "ip-10-0-0-109.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.109",
            "public_ip": "18.221.102.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b51d4a3e13e9031b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0881bf83bc19950d1",
            "tags": {
              "Name": "WindowsWeb-positively-suited-earwig"
            },
            "tags_all": {
              "Name": "WindowsWeb-positively-suited-earwig"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002c99c92ba58c0d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.WebSG",
            "aws_subnet.Public-Subnet",
            "aws_vpc.VPC-01",
            "data.aws_ami.windows-ami",
            "data.http.MyIP",
            "random_pet.random_pet_name",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767397775147:internet-gateway/igw-0f6fc66f74fef048d",
            "id": "igw-0f6fc66f74fef048d",
            "owner_id": "767397775147",
            "tags": {
              "Name": "positively-suited-earwig"
            },
            "tags_all": {
              "Name": "positively-suited-earwig"
            },
            "vpc_id": "vpc-085eb742993f3ddc5"
          },
          "dependencies": [
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Public_NAT_Gateway_Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0347745f8fdbed293",
            "association_id": "eipassoc-05a388e714658cd4e",
            "connectivity_type": "public",
            "id": "nat-0fa77b56131812248",
            "network_interface_id": "eni-0bf01e7ceed19d015",
            "private_ip": "10.0.7.10",
            "public_ip": "3.130.150.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0881bf83bc19950d1",
            "tags": {
              "Name": "positively-suited-earwig"
            },
            "tags_all": {
              "Name": "positively-suited-earwig"
            }
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_subnet.Public-Subnet",
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767397775147:route-table/rtb-0884d4b55161c7a76",
            "id": "rtb-0884d4b55161c7a76",
            "owner_id": "767397775147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fa77b56131812248",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/20",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "private-positively-suited-earwig"
            },
            "tags_all": {
              "Name": "private-positively-suited-earwig"
            },
            "timeouts": null,
            "vpc_id": "vpc-085eb742993f3ddc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.Public_NAT_Gateway_Public_Subnet",
            "aws_subnet.Public-Subnet",
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767397775147:route-table/rtb-0487e4352f1ff293b",
            "id": "rtb-0487e4352f1ff293b",
            "owner_id": "767397775147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6fc66f74fef048d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-positively-suited-earwig"
            },
            "tags_all": {
              "Name": "public-positively-suited-earwig"
            },
            "timeouts": null,
            "vpc_id": "vpc-085eb742993f3ddc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5a7b0311c7909c",
            "route_table_id": "rtb-0884d4b55161c7a76",
            "subnet_id": "subnet-0c906e2a87c07a0e0"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.Public_NAT_Gateway_Public_Subnet",
            "aws_route_table.private_rt",
            "aws_subnet.Private-Subnet",
            "aws_subnet.Public-Subnet",
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fb0e40501a3d7e9",
            "route_table_id": "rtb-0487e4352f1ff293b",
            "subnet_id": "subnet-0881bf83bc19950d1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.Public-Subnet",
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LinuxSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767397775147:security-group/sg-03cfaead773fc238a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access to internet and all protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cfaead773fc238a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access to SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access to mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "LinuxDB-positively-suited-earwig",
            "name_prefix": "",
            "owner_id": "767397775147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "positively-suited-earwig"
            },
            "tags_all": {
              "Name": "positively-suited-earwig"
            },
            "timeouts": null,
            "vpc_id": "vpc-085eb742993f3ddc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767397775147:security-group/sg-002c99c92ba58c0d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access to all IPV4 \u0026 all protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002c99c92ba58c0d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.58.14.162/32"
                ],
                "description": "Allows RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "WindowsWeb-positively-suited-earwig",
            "name_prefix": "",
            "owner_id": "767397775147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "positively-suited-earwig"
            },
            "tags_all": {
              "Name": "positively-suited-earwig"
            },
            "timeouts": null,
            "vpc_id": "vpc-085eb742993f3ddc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-01",
            "data.http.MyIP",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767397775147:subnet/subnet-0c906e2a87c07a0e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c906e2a87c07a0e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397775147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-positively-suited-earwig"
            },
            "tags_all": {
              "Name": "private-positively-suited-earwig"
            },
            "vpc_id": "vpc-085eb742993f3ddc5"
          },
          "dependencies": [
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767397775147:subnet/subnet-0881bf83bc19950d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0881bf83bc19950d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397775147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-positively-suited-earwig"
            },
            "tags_all": {
              "Name": "public-positively-suited-earwig"
            },
            "vpc_id": "vpc-085eb742993f3ddc5"
          },
          "dependencies": [
            "aws_vpc.VPC-01",
            "random_pet.random_pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767397775147:vpc/vpc-085eb742993f3ddc5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-08ed62b1178e77a8d",
            "default_route_table_id": "rtb-01d95ab61d0b9dcff",
            "default_security_group_id": "sg-0aa4de4d20535a512",
            "dhcp_options_id": "dopt-03ed2ef9b09f152bc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085eb742993f3ddc5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d95ab61d0b9dcff",
            "owner_id": "767397775147",
            "tags": {
              "Name": "positively-suited-earwig"
            },
            "tags_all": {
              "Name": "positively-suited-earwig"
            }
          },
          "dependencies": [
            "random_pet.random_pet_name"
          ]
        }
      ]
    }
  ]
}